<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        tools:ignore="UselessParent">

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/phoneNumberTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_phone_number"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phoneContainer">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/phoneNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chooseInfoTextView"
            android:text="@string/privacy_question"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <RadioButton
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number_short"
                />

            <RadioButton
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e_mail"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>

            <RadioButton
                android:id="@+id/both"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/both"
                android:checked="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>
        </RadioGroup>


    </LinearLayout>

</RelativeLayout>