<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textLabel"
                android:text="@string/errandme"
                android:textSize="28sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center_horizontal"
                android:paddingTop="80dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="65dp"
                android:theme="@style/AppTheme.NoActionBar">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/e_mail"
                    android:id="@+id/email" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:theme="@style/AppTheme.NoActionBar">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:id="@+id/password"
                    android:hint="@string/password" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="10dp"
                android:padding="12dp"
                android:text="@string/Login"
                android:textColor="@color/textColorPrimary"
                android:background="@color/colorPrimary" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/loginGoogle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/LoginGoogle"
                android:textColor="@color/textColorPrimary"
                android:background="@color/grayblue" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:padding="12dp">

                <TextView
                    android:id="@+id/register_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="16sp"
                    android:layout_toLeftOf="@+id/register_right"
                    android:layout_toStartOf="@+id/register_right"
                    android:text="@string/Register_left" />

                <TextView
                    android:id="@+id/register_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Register_right"
                    android:textColor="@color/colorPrimary"
                    android:clickable="true"
                    android:layout_alignBaseline="@+id/register_left"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_centerHorizontal="true"
                    android:textSize="16sp"
                    android:gravity="end"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>